環境設定変更

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "nest": "nest"
+    "nest": "npm --prefix ./backend run nest",
+    "backend": "npm --prefix ./backend run"
   },
   "keywords": [],
   "author": "",
